--- a/src/Archmage/GameBundle/Resources/views/footer.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/footer.html.twig
@@ -1,7 +1,7 @@
 {#
-<footer class="footer navbar navbar-default navbar-inverse">
+<footer class="footer navbar text-center text-responsive">
     <div class="container">
-        <small class="navbar-text"><i class="fa fa-fw fa-lg fa-copyright"></i> Copyright</small>
+        <span class="navbar-text"><i class="fa fa-fw fa-lg fa-copyright"></i><a href="{{ path( 'archmage_game_home_about' ) }}" class="link">Acerca / About</a></span>
     </div>
 </footer>
 #}
