--- a/src/Archmage/GameBundle/Resources/views/navbar.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/navbar.html.twig
@@ -58,6 +58,7 @@
                         <li><a href="{{ path('archmage_game_home_patch') }}"><i class="fa fa-fw fa-lg fa-medkit"></i>Parches</a></li>
                         <li><a href="{{ path('archmage_game_home_help') }}"><i class="fa fa-fw fa-lg fa-book"></i>Ayuda</a></li>
                         <li class="divider"></li>
+                        <li><a href="{{ path('archmage_game_home_about') }}"><i class="fa fa-fw fa-lg fa-question-circle"></i>Acerca</a></li>
                         <li><a href="{{ path('fos_user_security_logout') }}"><i class="fa fa-fw fa-lg fa-sign-out"></i>Salir</a></li>
                     </ul>
                 </li>
