--- a/src/Archmage/GameBundle/Resources/views/Account/legend.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Account/legend.html.twig
@@ -7,13 +7,13 @@
     <div class="row">
         <div class="col-xs-12">
             <div class="page-header text-center">
-                <h1><i class="fa fa-fw fa-moon-o"></i>Leyendas</h1>
+                <h1><i class="fa fa-fw fa-star"></i>Leyendas</h1>
             </div>
             <table id="datatable" class="table table-striped table-bordered table-condensed text-responsive" cellspacing="0" width="100%">
                 <thead>
                     <tr>
                         <th class="text-center"><i class="fa fa-fw fa-calendar"></i><span class="hidden-xs">Fecha</span></th>
-                        <th class="text-center"><i class="fa fa-fw fa-user"></i><span class="hidden-xs">Nick</span></th>
+                        <th class="text-center"><i class="fa fa-fw fa-user"></i><span class="hidden-xs">Archimago</span></th>
                         <th class="text-center"><i class="fa fa-fw fa-rocket"></i><span class="hidden-xs">Poder</span></th>
                         <th class="text-center"><i class="fa fa-fw fa-globe"></i><span class="hidden-xs">Tierras</span></th>
                     </tr>
@@ -53,10 +53,10 @@
                 "sProcessing": "Procesando...",
                 "sLengthMenu": "Ver _MENU_",
                 "sZeroRecords": "No se encontraron resultados",
-                "sEmptyTable": "Ningúna leyenda todavía",
-                "sInfo": "Mostrando magos del _START_ al _END_ de un total de _TOTAL_ registros",
-                "sInfoEmpty": "Mostrando magos del 0 al 0 de un total de 0 registros",
-                "sInfoFiltered": "(filtrado de un total de _MAX_ magos)",
+                "sEmptyTable": "Ningún Archimago todavía",
+                "sInfo": "Mostrando Archimagos del _START_ al _END_ de un total de _TOTAL_ registros",
+                "sInfoEmpty": "Mostrando Archimagos del 0 al 0 de un total de 0 registros",
+                "sInfoFiltered": "(filtrado de un total de _MAX_ Archimagos)",
                 "sInfoPostFix": "",
                 "sSearch": "",
                 "searchPlaceholder": "Buscar",
