Arreglado bug en summary con terrainMaintenance, siempre salia verde. Ahora chamanismo elimina poblacion y mana. Ahora serviceController addNews pondra los nuevos encantamientos basados en armyDefenseBonus y magicDefenseBonus. Mejorado help, patch, ranking y navbar.

--- a/src/Archmage/GameBundle/Resources/views/Home/about.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Home/about.html.twig
@@ -12,7 +12,7 @@
         </div>
         <div class="col-xs-12">
             <div class="panel panel-default">
-                <div class="panel-heading text-center">Hola</div>
+                <div class="panel-heading text-center">Archmage</div>
                 <div class="panel-body text-responsive text-only">
                     <p>He desarrollado este juego completamente desde cero para demostrar mis habilidades como desarrollador web. Para ello, he empleado los siguientes frameworks y herramientas de desarrollo:</p>
                     <p>I've completely developed on my own this game from scratch to show my coding skills as a web developer. Hence, I've used the following frameworks and developer tools:</p>
