--- a/src/Archmage/GameBundle/Resources/views/Home/help.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Home/help.html.twig
@@ -105,6 +105,12 @@
                 </div>
             </div>
             <div class="panel panel-default">
+                <div class="panel-heading text-center"><i class="fa fa-fw fa-shield"></i>Defensa</div>
+                <div class="panel-body text-responsive text-only">
+                    <p>En este juego el recurso más importante que se puede tener son las <span class="label label-extra">Tierras</span>, y dado que te las pueden robar al atacarte, es una buena idea tener siempre <span class="label label-extra">Tropas</span> en tu Reino para defenderte de los enemigos. Además, deberías construir <span class="label label-extra">Barreras</span> y <span class="label label-extra">Fortalezas</span> o lanzar <span class="label label-extra">Encantamientos</span> de defensa, así como guardar un <span class="label label-extra">Hechizo</span> y/o un <span class="label label-extra">Artefacto</span> para que se active en caso de un ataque enemigo. Ten en cuenta, sin embargo, que si logras bloquear un ataque o un conjuro, se te destruirán los respectivos <span class="label label-extra">Edificios</span> en un símbolo de desgaste, que se convertirán en <span class="label label-extra">Tierras</span> para que puedas reconstruirlos.</p>
+                </div>
+            </div>
+            <div class="panel panel-default">
                 <div class="panel-heading text-center"><i class="fa fa-fw fa-map"></i>Aventura</div>
                 <div class="panel-body text-responsive text-only">
                     <p>Para aquellos jugadores que no pueden estar mucho tiempo sin hacer nada, siempre tienen la posibilidad de usar <span class="label label-map">Mapas</span>, pequeños trozos de papel que señalan la localización de un <span class="label label-extra">Artefacto</span> y muchos tesoros. Pero cuidado, estará protegido por muchas tropas, ejércitos de monstruos vagabundos que no buscan más que la destrucción. Pueden obtenerse en la subasta, o mediante el hechizo <span class="label label-danger">Saquear</span>. Existen tres niveles de mapas, fácil (verde), medio (amarillo) y difícil (rojo), y sus recompensas, tanto <span class="label label-extra">Artefacto</span> como <span class="label label-extra">Oro</span>, aumentan con la dificultad, llegando incluso a tener la posibilidad de obtener un <span class="label label-legendary">Artefacto</span> legendario.</p>
