--- a/src/Archmage/GameBundle/Resources/views/Home/patch.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Home/patch.html.twig
@@ -26,12 +26,6 @@
                                 <li><span class="label label-primary">Volar</span> por <span class="label label-primary">Oasis</span>, aumenta la cantidad de <span class="label label-extra">Tropas</span> invocadas en tu Reino.</li>
                             </ul>
                         </li>
-                        <li>También a raíz de lo anterior, se han reducido los bonus de <span class="label label-extra">Velocidad</span> de los siguientes Artefactos:
-                            <ul>
-                                <li><span class="label label-extra">Tela de Araña</span>, de -3 a -1 velocidad.</li>
-                                <li><span class="label label-extra">Botas de Velocidad</span>, de +3 a +1 velocidad.</li>
-                            </ul>
-                        </li>
                         <li>Ahora el daño en combate se redondea de manera clásica. Si se le hace mas de la mitad del daño a una unidad, muere. Es decir, ahora hay heridas.</li>
                         <li>Ahora los Artefactos, Hechizos y Unidades tienen niveles de rareza. Estos afectan a la frecuencia de apararición en el juego de cualquiera de las maneras habituales:
                             <ul>
@@ -52,30 +46,25 @@
                         <li>Se ha añadido el sistema de <span class="label label-recipe">Alquimia</span> al juego. Un jugador puede usar <span class="label label-recipe">Recetas</span> para convertir unos Artefactos en otros. Pueden conseguirse en la Subasta, y sólo se gastan si otorgan <span class="label label-legendary">Artefactos</span> legendarios. De lo contrario, son reutilizables.</li>
                         <li>Se ha añadido el sistema de <span class="label label-map">Aventuras</span> al juego. Un jugador puede tratar de usar <span class="label label-map">Mapas</span> para derrotar ejércitos que merodean por el Reino y obtener interesantes recompensas. Pueden conseguirse en la Subasta, y son de un sólo uso, ganes o pierdas:
                             <ul>
-                                <li>Fáciles, de color <span style="color:limegreen;">verde</span>. Normalmente pocas tropas y hasta un Artefacto <span class="label label-extra">Común</span>.</li>
-                                <li>Medios, de color <span style="color:yellow;">amarillo</span>. Normalmente moderadas tropas y hasta un Artefacto <span class="label label-extra">Raro</span>.</li>
+                                <li>Fáciles, de color <span style="color:limegreen;">verde</span>. Normalmente pocas tropas y hasta un <span class="label label-extra">Artefacto</span> común.</li>
+                                <li>Medios, de color <span style="color:yellow;">amarillo</span>. Normalmente moderadas tropas y hasta un <span class="label label-extra">Artefacto</span> raro.</li>
                                 <li>Difíciles, de color <span style="color:red;">rojo</span>. Normalmente muchas tropas y hasta un <span class="label label-legendary">Artefacto</span> legendario.</li>
                             </ul>
                         </li>
                         <li>Se ha introducido en el juego las <span class="label label-rune">Runas</span>, una moneda de cambio empleada en el nuevo <span class="label label-rune">Mercado</span>, una versión de la futura tienda con dinero interno del juego. Se pueden obtener completando mapas y en ocasiones especiales.</li>
-                        <li>Se han eliminado los siguientes Artefactos:
-                            <ul>
-                                <li><span class="label label-extra">Botas de Velocidad</span>, ha sido sustituido por <span class="label label-extra">Poción de Agilidad</span>.</li>
-                                <li><span class="label label-extra">Elixir de Amor</span>, ha sido sustituido por <span class="label label-extra">Poción de Amor</span>.</li>
-                                <li><span class="label label-extra">Agua Bendita</span>, ha sido sustituido por <span class="label label-extra">Poción de Pureza</span>.</li>
-                            </ul>
-                        </li>
-                        <li>Se han añadido los siguientes Artefactos:
+                        <li>Se han añadido o modificado los siguientes Artefactos:
                             <ul>
                                 <li><span class="label label-extra">Poción de Fuerza</span>, +30% <span class="label label-extra">Ataque</span> a tus tropas.</li>
                                 <li><span class="label label-extra">Poción de Vitalidad</span>, +30% <span class="label label-extra">Defensa</span> a tus tropas.</li>
-                                <li><span class="label label-extra">Poción de Agilidad</span>, +1 <span class="label label-extra">Velocidad</span> a tus tropas.</li>
-                                <li><span class="label label-extra">Poción de Amor</span>, +30% <span class="label label-extra">Personas</span> a tu Reino.</li>
-                                <li><span class="label label-extra">Poción de Pureza</span>, elimina un <span class="label label-extra">Encantamiento</span> de tu Reino.</li>
+                                <li><span class="label label-extra">Poción de Agilidad</span>, renombrado de <span class="label label-extra">Botas de Velocidad</span> +1 <span class="label label-extra">Velocidad</span> a tus tropas.</li>
+                                <li><span class="label label-extra">Poción de Amor</span>, renombrada de <span class="label label-extra">Elixir de Amor</span>, +30% <span class="label label-extra">Personas</span> a tu Reino.</li>
+                                <li><span class="label label-extra">Poción de Pureza</span>, renombrada de <span class="label label-extra">Agua Bendita</span>, elimina un <span class="label label-extra">Encantamiento</span> aleatorio de tu Reino.</li>
                                 <li><span class="label label-extra">Muñeca Voodoo</span>, hasta -25 <span class="label label-extra">Turnos</span> al Reino enemigo.</li>
                                 <li><span class="label label-extra">Reloj de Arena</span>, hasta -100 <span class="label label-extra">Turnos</span> a los Encantamientos de tu Reino.</li>
                                 <li><span class="label label-extra">Cuerno de Guerra</span>, invoca <span class="label label-extra">Humanos</span>.</li>
                                 <li><span class="label label-extra">Demonio Embotellado</span>, renombrado de <span class="label label-extra">Calavera Maldita</span>.</li>
+                                <li><span class="label label-extra">Barril de Pólvora</span>, ahora destruye un 3% de todos los <span class="label label-extra">Edificios</span> enemigos.</li>
+                                <li><span class="label label-extra">Tela de Araña</span>, -1 <span class="label label-extra">Velocidad</span> a tus tropas.</li>
                             </ul>
                         </li>
                         <li>Se han añadido los siguientes Héroes:
@@ -99,6 +88,7 @@
                             </ul>
                         </li>
                         <li>Ahora los <span class="label label-extra">Barracones</span> ya no permiten reclutar más deprisa, sino que aumentan la cantidad de <span class="label label-extra">Tropas</span> invocadas.</li>
+                        <li>Ahora si tus <span class="label label-extra">Barreras</span> o <span class="label label-extra">Fortalezas</span> detienen un conjuro o ataque, algunas se verán destruidas en el proceso para simbolizar un desgaste, que se convertirán en tierras libres.</li>
                         <li>Ahora solo se subastará una unidad de <span class="label label-extra">Artefacto</span> cada vez.</li>
                         <li>Ahora los <span class="label label-extra">Artefactos</span> otorgan poder, y los <span class="label label-legendary">Artefactos</span> legendarios mucho más poder que los demás.</li>
                         <li>Se ha reducido el cap de poder superior al atacar del 80% al 60%.</li>
