--- a/src/Archmage/GameBundle/Resources/views/Home/patch.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Home/patch.html.twig
@@ -20,7 +20,7 @@
                         <li>A raíz de lo anterior, se han eliminado los Hechizos de <span class="label label-extra">Velocidad</span> y se han sustituido por otros nuevos:
                             <ul>
                                 <li><span class="label label-info">Lentitud</span> por <span class="label label-info">Sabiduría</span>, reduce el número de <span class="label label-extra">Turnos</span> para investigar.
-                                <li><span class="label label-danger">Quemar Alas</span> por <span class="label label-danger">Saquear</span>, encuentra <span class="label label-map">Mapas</span>.</li>
+                                <li><span class="label label-danger">Quemar Alas</span> por <span class="label label-danger">Saquear</span>, encuentra <span class="label label-quest">Mapas</span>.</li>
                                 <li><span class="label label-warning">Miedo</span> por <span class="label label-warning">Terror</span>, reduce <span class="label label-extra">Defensa Física</span> y <span class="label label-extra">Defensa Mágica</span> al Reino enemigo.</li>
                                 <li><span class="label label-success">Prisa</span> por <span class="label label-success">Druidismo</span>, encuentra <span class="label label-recipe">Recetas</span>.</li>
                                 <li><span class="label label-primary">Volar</span> por <span class="label label-primary">Oasis</span>, aumenta la cantidad de <span class="label label-extra">Tropas</span> invocadas en tu Reino.</li>
@@ -44,13 +44,7 @@
                             </ul>
                         </li>
                         <li>Se ha añadido el sistema de <span class="label label-recipe">Alquimia</span> al juego. Un jugador puede usar <span class="label label-recipe">Recetas</span> para convertir unos Artefactos en otros. Pueden conseguirse en la Subasta, y sólo se gastan si otorgan <span class="label label-legendary">Artefactos</span> legendarios. De lo contrario, son reutilizables.</li>
-                        <li>Se ha añadido el sistema de <span class="label label-map">Aventuras</span> al juego. Un jugador puede tratar de usar <span class="label label-map">Mapas</span> para derrotar ejércitos que merodean por el Reino y obtener interesantes recompensas. Pueden conseguirse en la Subasta, y son de un sólo uso, ganes o pierdas:
-                            <ul>
-                                <li>Fáciles, de color <span style="color:limegreen;">verde</span>. Normalmente pocas tropas y hasta un <span class="label label-extra">Artefacto</span> común.</li>
-                                <li>Medios, de color <span style="color:yellow;">amarillo</span>. Normalmente moderadas tropas y hasta un <span class="label label-extra">Artefacto</span> raro.</li>
-                                <li>Difíciles, de color <span style="color:red;">rojo</span>. Normalmente muchas tropas y hasta un <span class="label label-legendary">Artefacto</span> legendario.</li>
-                            </ul>
-                        </li>
+                        <li>Se ha añadido el sistema de <span class="label label-quest">Aventuras</span> al juego. Un jugador puede tratar de usar <span class="label label-quest">Mapas</span> para derrotar ejércitos que merodean por el Reino y obtener interesantes recompensas. Pueden conseguirse en la Subasta, y son de un sólo uso, ganes o pierdas. Hay varios tipos de dificultad, y las recompensas pueden varíar, y dar <span class="label label-rune">Runas</span> o <span class="label label-legendary">Artefactos</span> legendarios.</li>
                         <li>Se ha introducido en el juego las <span class="label label-rune">Runas</span>, una moneda de cambio empleada en el nuevo <span class="label label-rune">Mercado</span>, una versión de la futura tienda con dinero interno del juego. Se pueden obtener completando mapas y en ocasiones especiales.</li>
                         <li>Se han añadido o modificado los siguientes Artefactos:
                             <ul>
@@ -73,7 +67,7 @@
                                 <li><span class="label label-success">Dríada</span>, aumenta la <span class="label label-extra">Defensa Mágica</span> de tu Reino.</li>
                                 <li><span class="label label-danger">Súcubo</span>, aumenta el número de <span class="label label-extra">Tropas</span> invocadas.</li>
                                 <li><span class="label label-primary">Campeón</span>, aumenta la <span class="label label-extra">Defensa Física</span> de tu Reino.</li>
-                                <li><span class="label label-warning">Jinete sin Cabeza</span>, intercambiado con <span class="label label-warning">Nigromante</span>, resucita <span class="label label-warning">Esqueletos</span> tras una batalla que no sea un <span class="label label-map">Mapa</span>.</li>
+                                <li><span class="label label-warning">Jinete sin Cabeza</span>, intercambiado con <span class="label label-warning">Nigromante</span>, resucita <span class="label label-warning">Esqueletos</span> tras una batalla que no sea un <span class="label label-quest">Mapa</span>.</li>
                             </ul>
                         </li>
                         <li>Ahora <span class="label label-success">Ladrona Elfa</span> elimina 1 turno por nivel, en lugar de ser porcentual.</li>
