--- a/src/Archmage/GameBundle/Resources/views/Kingdom/summary.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Kingdom/summary.html.twig
@@ -117,7 +117,7 @@
                             {% else %}
                             <div class="col-xs-12">Ninguna tropa en tu Reino</div>
                             {% endfor %}
-                            <div class="col-xs-12"><i class="fa fa-fw fa-map"></i>{{ player.maps|length|nf }} <span class="label label-extra" data-toggle="tooltip" data-placement="top" title="Mapas en tu poder">Mapas</span></div>
+                            <div class="col-xs-12"><i class="fa fa-fw fa-map"></i>{{ player.quests|length|nf }} <span class="label label-extra" data-toggle="tooltip" data-placement="top" title="Mapas en tu poder">Mapas</span></div>
                         </div>
                     </div>
                 </div>
