--- a/src/Archmage/GameBundle/Resources/views/Army/quest.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Army/quest.html.twig
@@ -20,7 +20,7 @@
                             <img class="custom-thumbnail" src="{{ asset('bundles/archmagegame/images/kingdom/quest.jpg') }}">
                         </div>
                         <div class="col-xs-8 text-padded">
-                            <div class="col-xs-12">Aquí puedes gastar 5 <span class="label label-extra">Turnos</span> y un <span class="label label-map">Mapa</span> para mandar a tus tropas a la batalla en busca de fortuna y gloria. En algunos casos incluso existe la probabilidad de encontrar un <span class="label label-legendary">Artefacto</span> legendario.</div>
+                            <div class="col-xs-12">Aquí puedes gastar 5 <span class="label label-extra">Turnos</span> y un <span class="label label-quest">Mapa</span> para mandar a tus tropas a la batalla en busca de fortuna y gloria. En algunos casos incluso existe la probabilidad de encontrar un <span class="label label-legendary">Artefacto</span> legendario.</div>
                         </div>
                     </div>
                 </div>
@@ -29,17 +29,17 @@
                 </div>
             </div>
         </div>
-        {% for map in player.maps %}
+        {% for quest in player.quests %}
         <div class="col-xs-12 col-md-6">
-            <div class="panel panel-map">
-                <div class="panel-heading text-center"><i class="fa fa-fw fa-map"></i><a href="{{ path('archmage_game_home_help') }}#maps" class="link">Mapa del Tesoro</a></div>
+            <div class="panel panel-quest">
+                <div class="panel-heading text-center"><i class="fa fa-fw fa-map"></i><a href="{{ path('archmage_game_home_help') }}#aventuras" class="link">{{ quest.name }}</a></div>
                 <div class="panel-body text-responsive">
                     <div class="row">
                         <div class="col-xs-4">
-                            <img class="custom-thumbnail" src="{{ asset( 'bundles/archmagegame/images/map/' ~ map.image ~ '.jpg' ) }}" />
+                            <img class="custom-thumbnail" src="{{ asset( quest.image ) }}" />
                         </div>
                         <div class="col-xs-8 text-padded">
-                            {% for troop in map.troops %}
+                            {% for troop in quest.troops %}
                                 {# row #}
                                 <div class="col-xs-12"><i class="fa fa-fw fa-users"></i><span class="label label-{{ troop.unit.faction.class }}" data-toggle="tooltip" data-placement="top" title="Tropas enemigas a derrotar"><a href="{{ path('archmage_game_home_help') }}#{{ troop.unit.name|slug }}" class="link">{{ troop.unit.name }}</a></span> {{ troop.quantity|nff }}</div>
                             {% endfor %}
@@ -48,13 +48,13 @@
                     </div>
                 </div>
                 <div class="panel-footer text-center">
-                    <form id="map{{ map.id }}" name="map{{ map.id }}" class="form-inline" data-toggle="validator" action="{{ path('archmage_game_army_quest') }}" method="post" role="form">
+                    <form id="quest{{ quest.id }}" name="quest{{ quest.id }}" class="form-inline" data-toggle="validator" action="{{ path('archmage_game_army_quest') }}" method="post" role="form">
                         <div class="form-group">
                             <div class="input-group">
                                 <div class="btn-group" role="group" aria-label="...">
-                                    <button type="submit" id="activate" name="action" value="activate" class="btn btn-default"><i class="fa fa-fw fa-flag"></i>Atacar</button>
+                                    <button type="submit" id="activate" name="action" value="activate" class="btn btn-default"><i class="fa fa-fw fa-flag"></i>Comenzar</button>
                                 </div>
-                                <input type="hidden" id="map" name="map" value="{{ map.id }}" required />
+                                <input type="hidden" id="quest" name="quest" value="{{ quest.id }}" required />
                             </div>
                         </div>
                     </form>
@@ -64,7 +64,7 @@
         {% else %}
         <div class="container">
             <div class="col-xs-12 alert alert-danger text-responsive text-center" role="alert">
-                <i class="fa fa-fw fa-exclamation-triangle"></i>Actualmente no tienes Mapas en tu poder. Tal vez deberías comprar alguno en la <i class="fa fa-fw fa-legal"></i><a href="{{ path('archmage_game_kingdom_auction') }}">Subasta</a>.
+                <i class="fa fa-fw fa-exclamation-triangle"></i>Actualmente no tienes Aventuras en tu poder. Tal vez deberías comprar alguna en la <i class="fa fa-fw fa-legal"></i><a href="{{ path('archmage_game_kingdom_auction') }}">Subasta</a>.
             </div>
         </div>
         {% endfor %}
