--- a/src/Archmage/GameBundle/Resources/views/Home/help.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Home/help.html.twig
@@ -113,7 +113,7 @@
             <div class="panel panel-default">
                 <div class="panel-heading text-center"><i class="fa fa-fw fa-map"></i>Aventura</div>
                 <div class="panel-body text-responsive text-only">
-                    <p>Para aquellos jugadores que no pueden estar mucho tiempo sin hacer nada, siempre tienen la posibilidad de usar <span class="label label-map">Mapas</span>, pequeños trozos de papel que señalan la localización de un <span class="label label-extra">Artefacto</span> y muchos tesoros. Pero cuidado, estará protegido por muchas tropas, ejércitos de monstruos vagabundos que no buscan más que la destrucción. Pueden obtenerse en la subasta, o mediante el hechizo <span class="label label-danger">Saquear</span>. Existen tres niveles de mapas, fácil (verde), medio (amarillo) y difícil (rojo), y sus recompensas, tanto <span class="label label-extra">Artefacto</span> como <span class="label label-extra">Oro</span>, aumentan con la dificultad, llegando incluso a tener la posibilidad de obtener un <span class="label label-legendary">Artefacto</span> legendario.</p>
+                    <p>Para aquellos jugadores que no pueden estar mucho tiempo sin hacer nada, siempre tienen la posibilidad de usar <span class="label label-quest">Mapas</span>, pequeños trozos de papel que señalan la localización de un <span class="label label-extra">Artefacto</span> y muchos tesoros. Pero cuidado, estará protegido por muchas tropas, ejércitos de monstruos vagabundos que no buscan más que la destrucción. Pueden obtenerse en la subasta, o mediante el hechizo <span class="label label-danger">Saquear</span>. Existen varios niveles, y sus recompensas, tanto <span class="label label-extra">Artefactos</span> como <span class="label label-extra">Oro</span>, aumentan con la dificultad, llegando incluso a tener la posibilidad de obtener un <span class="label label-legendary">Artefacto</span> legendario.</p>
                 </div>
             </div>
             <div class="panel panel-default">
@@ -125,7 +125,7 @@
             <div class="panel panel-default">
                 <div class="panel-heading text-center"><i class="fa fa-fw fa-magic"></i>Runas</div>
                 <div class="panel-body text-responsive text-only">
-                    <p>Las <span class="label label-rune">Runas</span> proporcionan recursos instantáneos a los jugadores, otorgando una importante ventaja si se gastan en el momento preciso. Son extremadamente difíciles de conseguir, pero se comenta que completar <span class="label label-map">Mapas</span> es una buena manera. Todos los jugadores empiezan con unas pocas y, aunque no son necesarias para ganar, algunos jugadores pueden optar por adquirir más a través de nuestra <span class="label label-extra">Tienda</span> interna del juego. En ocasiones especales incluso se regalarán algunas a todos los jugadores.</p>
+                    <p>Las <span class="label label-rune">Runas</span> proporcionan recursos instantáneos a los jugadores, otorgando una importante ventaja si se gastan en el momento preciso. Son extremadamente difíciles de conseguir, pero se comenta que completar <span class="label label-quest">Aventuras</span> es una buena manera. Todos los jugadores empiezan con unas pocas y, aunque no son necesarias para ganar, algunos jugadores pueden optar por adquirir más a través de nuestra <span class="label label-extra">Tienda</span> interna del juego. En ocasiones especales incluso se regalarán algunas a todos los jugadores.</p>
                 </div>
             </div>
         </div>
@@ -333,8 +333,8 @@
             </div>
         </div>
         <div class="col-xs-12 col-md-6">
-            <div class="panel panel-map">
-                <div class="panel-heading text-center"><i class="fa fa-fw fa-map"></i>Mapa del Tesoro</div>
+            <div class="panel panel-quest">
+                <div class="panel-heading text-center"><i class="fa fa-fw fa-map"></i>Mapa de Aventura</div>
                 <div class="panel-body text-responsive">
                     <div class="row">
                         <div class="col-xs-4">
@@ -354,7 +354,7 @@
                     <i class="fa fa-fw fa-joomla"></i>Otorga <span class="label label-extra">Artefactos</span> y <span class="label label-extra">Oro</span> como recompensa
                 </div>
                 {# TAGS FOR SEARCH #}
-                <span class="hidden">Mapas, Aventura</span>
+                <span class="hidden">Aventura</span>
             </div>
         </div>
         <div class="col-xs-12">
