--- a/src/Archmage/GameBundle/Resources/views/Magic/alchemy.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Magic/alchemy.html.twig
@@ -68,7 +68,7 @@
             {% else %}
             <div class="container">
                 <div class="col-xs-12 alert alert-danger text-responsive text-center" role="alert">
-                    <i class="fa fa-fw fa-exclamation-triangle"></i>Actualmente no tienes Recetas en tu poder. Tal vez deberías comprar alguna en la <i class="fa fa-fw fa-legal"></i><a href="{{ path('archmage_game_kingdom_auction') }}">Subasta</a>.
+                    <i class="fa fa-fw fa-exclamation-triangle"></i>Actualmente no tienes <span class="label label-recipe">Recetas</span> en tu poder. Tal vez deberías comprar alguna en la <i class="fa fa-fw fa-legal"></i><a href="{{ path('archmage_game_kingdom_auction') }}">Subasta</a>.
                 </div>
             </div>
             {% endfor %}
