--- a/src/Archmage/GameBundle/Resources/views/Magic/conjure.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Magic/conjure.html.twig
@@ -88,7 +88,7 @@
         {% else %}
         <div class="container">
             <div class="col-xs-12 alert alert-danger text-responsive text-center" role="alert">
-                <i class="fa fa-fw fa-exclamation-triangle"></i>Actualmente no tienes Hechizos investigados. Tal vez deberías <i class="fa fa-fw fa-graduation-cap"></i><a href="{{ path('archmage_game_magic_research') }}">Investigar</a> algunos.
+                <i class="fa fa-fw fa-exclamation-triangle"></i>Actualmente no tienes <span class="label label-extra">Hechizos</span> investigados. Tal vez deberías <i class="fa fa-fw fa-graduation-cap"></i><a href="{{ path('archmage_game_magic_research') }}">Investigar</a> algunos.
             </div>
         </div>
         {% endfor %}
