--- a/src/Archmage/GameBundle/Resources/views/Kingdom/summary.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Kingdom/summary.html.twig
@@ -47,7 +47,7 @@
                             <div class="col-xs-12"><i class="fa fa-fw fa-tint"></i>{{ player.manaresourceperturn|nf }}-{{ player.manamaintenanceperturn|nf }} = <span class="label label-{% if player.manaresourceperturn - player.manamaintenanceperturn >= 0 %}success{% else %}danger{% endif %}">{{ (player.manaresourceperturn -  player.manamaintenanceperturn)|nf }}</span> <span class="label label-extra">Maná/Turno</span></div>
                             <div class="col-xs-12"><i class="fa fa-fw fa-user-plus"></i>{{ player.summonBonus|nf }}% <span class="label label-extra" data-toggle="tooltip" data-placement="top" title="Aumenta la cantidad de tropas invocadas">Bonus de Invocación</span></div>
                             <div class="col-xs-12"><i class="fa fa-fw fa-hourglass-half"></i>{{ player.researchBonus|nf }}% <span class="label label-extra" data-toggle="tooltip" data-placement="top" title="Reduce la cantidad de turnos necesarios para investigar">Bonus de Investigación</span></div>
-                            <div class="col-xs-12"><i class="fa fa-fw fa-flask"></i>{{ player.recipes|length|nf }} <span class="label label-extra" data-toggle="tooltip" data-placement="top" title="Recetas en tu poder">Recetas</span></div>
+                            <div class="col-xs-12"><i class="fa fa-fw fa-flask"></i>{{ player.recipes|length|nf }} <span class="label label-extra" data-toggle="tooltip" data-placement="top" title="Recetas en tu poder">Recetas de Alquimia</span></div>
                         </div>
                     </div>
                 </div>
@@ -117,7 +117,7 @@
                             {% else %}
                             <div class="col-xs-12">Ninguna tropa en tu Reino</div>
                             {% endfor %}
-                            <div class="col-xs-12"><i class="fa fa-fw fa-map"></i>{{ player.quests|length|nf }} <span class="label label-extra" data-toggle="tooltip" data-placement="top" title="Mapas en tu poder">Mapas</span></div>
+                            <div class="col-xs-12"><i class="fa fa-fw fa-map"></i>{{ player.quests|length|nf }} <span class="label label-extra" data-toggle="tooltip" data-placement="top" title="Mapas en tu poder">Mapas de Aventura</span></div>
                         </div>
                     </div>
                 </div>
@@ -161,7 +161,7 @@
                         </div>
                         <div class="col-xs-8 text-padded">
                             <div class="col-xs-12"><i class="fa fa-fw fa-shield"></i>{{ player.armyDefense|nf }}/75 % <span class="label label-extra" data-toggle="tooltip" data-placement="top" title="Probabilidad de que el enemigo falle al atacarte, aumenta con las Fortalezas y algunos Encantamientos">Defensa Física</span></div>
-                            <div class="col-xs-12"><i class="fa fa-fw fa-magic"></i>{{ player.magicDefense|nf }}/75 % <span class="label label-extra" data-toggle="tooltip" data-placement="top" title="Probabilidad de que el enemigo falle al hechizarte o activar artefactos, aumenta con las Barreras y algunos Encantamientos">Defensa Mágica</span></div>
+                            <div class="col-xs-12"><i class="fa fa-fw fa-chain-broken"></i>{{ player.magicDefense|nf }}/75 % <span class="label label-extra" data-toggle="tooltip" data-placement="top" title="Probabilidad de que el enemigo falle al hechizarte o activar artefactos, aumenta con las Barreras y algunos Encantamientos">Defensa Mágica</span></div>
                             <div class="col-xs-12">{% if player.research %}<i class="fa fa-fw fa-magic"></i><span class="label label-{{ player.research.spell.faction.class }}"><a href="{{ path('archmage_game_home_help') }}#{{ player.research.spell.name|slug }}" class="link">{{ player.research.spell.name }}</a></span>{% else %}Ningún hechizo en defensa{% endif %}</div>
                             <div class="col-xs-12">{% if player.item %}<i class="fa fa-fw fa-diamond"></i><span class="label label-{{ player.item.artifact.class }}"><a href="{{ path('archmage_game_home_help') }}#{{ player.item.artifact.name|slug }}" class="link">{{ player.item.artifact.name }}</a></span>{% else %}Ningún artefacto en defensa{% endif %}</div>
                         </div>
@@ -175,7 +175,7 @@
         </div>
         <div class="col-xs-12 col-md-6">
             <div class="panel panel-default">
-                <div class="panel-heading text-center"><i class="fa fa-fw fa-user"></i>Cuenta</div>
+                <div class="panel-heading text-center"><i class="fa fa-fw fa-user"></i>Social</div>
                 <div class="panel-body text-responsive">
                     <div class="row">
                         <div class="col-xs-4">
