--- a/src/Archmage/GameBundle/Resources/views/Home/help.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Home/help.html.twig
@@ -123,9 +123,9 @@
                 </div>
             </div>
             <div class="panel panel-default">
-                <div class="panel-heading text-center"><i class="fa fa-fw fa-magic"></i>Runas</div>
+                <div class="panel-heading text-center"><i class="fa fa-fw fa-ils"></i>Runas</div>
                 <div class="panel-body text-responsive text-only">
-                    <p>Las <span class="label label-rune">Runas</span> proporcionan recursos instantáneos a los jugadores, otorgando una importante ventaja si se gastan en el momento preciso. Son extremadamente difíciles de conseguir, pero se comenta que completar <span class="label label-quest">Aventuras</span> es una buena manera. Todos los jugadores empiezan con unas pocas y, aunque no son necesarias para ganar, algunos jugadores pueden optar por adquirir más a través de nuestra <span class="label label-extra">Tienda</span> interna del juego. En ocasiones especales incluso se regalarán algunas a todos los jugadores.</p>
+                    <p>Las <span class="label label-rune">Runas</span> proporcionan recursos instantáneos a los jugadores, otorgando una importante ventaja si se gastan en el momento preciso. Son extremadamente difíciles de conseguir, pero se comenta que completar <span class="label label-quest">Aventuras</span> es una buena manera. Todos los jugadores empiezan con unas pocas y, aunque no son necesarias para ganar, algunos jugadores pueden optar por adquirir más a través de nuestra <span class="label label-extra">Tienda</span> interna del juego. En ocasiones especiales incluso se regalarán algunas a todos los jugadores.</p>
                 </div>
             </div>
         </div>
@@ -385,11 +385,10 @@
             </div>
         </div>
         {% endfor %}
-        </div>
         <div class="col-xs-12">
             <div class="page-header text-center">
                 <a name="runas"></a>
-                <h1><i class="fa fa-fw fa-info-circle"></i>Runas ({{ runes|length|nf }})</h1>
+                <h1><i class="fa fa-fw fa-ils"></i>Runas ({{ runes|length|nf }})</h1>
             </div>
         </div>
         {% for rune in runes %}
