--- a/src/Archmage/GameBundle/Resources/views/Home/help.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Home/help.html.twig
@@ -161,7 +161,7 @@
         <div class="col-xs-12">
             <div class="page-header text-center">
                 <a name="edificios"></a>
-                <h1><i class="fa fa-fw fa-info-circle"></i>Edificios ({{ buildings|length|nf }})</h1>
+                <h1><i class="fa fa-fw fa-home"></i>Edificios ({{ buildings|length|nf }})</h1>
             </div>
         </div>
         {% for building in buildings %}
@@ -201,7 +201,7 @@
         <div class="col-xs-12">
             <div class="page-header text-center">
                 <a name="unidades"></a>
-                <h1><i class="fa fa-fw fa-info-circle"></i>Unidades ({{ units|length|nf }})</h1>
+                <h1><i class="fa fa-fw fa-group"></i>Unidades ({{ units|length|nf }})</h1>
             </div>
         </div>
         {% for unit in units %}
@@ -237,7 +237,7 @@
         <div class="col-xs-12">
             <div class="page-header text-center">
                 <a name="heroes"></a>
-                <h1><i class="fa fa-fw fa-info-circle"></i>Héroes ({{ heroes|length|nf }})</h1>
+                <h1><i class="fa fa-fw fa-user"></i>Héroes ({{ heroes|length|nf }})</h1>
             </div>
         </div>
         {% for hero in heroes %}
@@ -268,7 +268,7 @@
         <div class="col-xs-12">
             <div class="page-header text-center">
                 <a name="hechizos"></a>
-                <h1><i class="fa fa-fw fa-info-circle"></i>Hechizos y Encantamientos ({{ spells|length|nf }})</h1>
+                <h1><i class="fa fa-fw fa-magic"></i>Hechizos y <i class="fa fa-fw fa-link"></i>Encantamientos ({{ spells|length|nf }})</h1>
             </div>
         </div>
         {% for spell in spells %}
@@ -360,7 +360,7 @@
         <div class="col-xs-12">
             <div class="page-header text-center">
                 <a name="artefactos"></a>
-                <h1><i class="fa fa-fw fa-info-circle"></i>Artefactos ({{ artifacts|length|nf }})</h1>
+                <h1><i class="fa fa-fw fa-diamond"></i>Artefactos ({{ artifacts|length|nf }})</h1>
             </div>
         </div>
         {% for artifact in artifacts %}
