Arreglado un error en summary por el cual no salia el poder de los artefactos legendarios. Arreglado un error en las fixtures de artefactos.

--- a/src/Archmage/GameBundle/Resources/views/Kingdom/summary.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Kingdom/summary.html.twig
@@ -245,29 +245,29 @@
                             </tr>
                             {% endfor %}
                             {% for contract in player.contracts %}
-                                <tr>
-                                    <td class="text-left"><i class="fa fa-fw fa-user"></i><span class="label label-{{ contract.hero.faction.class }}"><a href="{{ path('archmage_game_home_help') }}#{{ contract.hero.name|slug }}" class="link">{{ contract.hero.name }}</a></span></td>
-                                    <td class="text-right">{{ contract.level|nf }}</td>
-                                    <td class="text-right">{{ (contract.level * contract.hero.power)|nf }}</td>
-                                    <td class="text-right"></td>
-                                    <td class="text-right">{% if contract.hero.skill.goldBonus > 0 %}{{ (contract.level * contract.hero.skill.goldBonus)|nf }}%{% else %}0{% endif %}</td>
-                                    <td class="text-right">{% if contract.hero.skill.peopleBonus > 0 %}{{ (contract.level * contract.hero.skill.peopleBonus)|nf }}%{% else %}0{% endif %}</td>
-                                    <td class="text-right">{% if contract.hero.skill.manaBonus > 0 %}{{ (contract.level * contract.hero.skill.manaBonus)|nf }}%{% else %}0{% endif %}</td>
-                                    <td class="text-right">-0</td>
-                                    <td class="text-right">-{{ (contract.level * contract.hero.goldMaintenance)|nf }}</td>
-                                    <td class="text-right">-{{ (contract.level * contract.hero.peopleMaintenance)|nf }}</td>
-                                    <td class="text-right">-{{ (contract.level * contract.hero.manaMaintenance)|nf }}</td>
-                                    <td class="text-right">0</td>
-                                    <td class="text-right">-{{ (contract.level * contract.hero.goldMaintenance)|nf }}</td>
-                                    <td class="text-right">-{{ (contract.level * contract.hero.peopleMaintenance)|nf }}</td>
-                                    <td class="text-right">-{{ (contract.level * contract.hero.manaMaintenance)|nf }}</td>
-                                </tr>
+                            <tr>
+                                <td class="text-left"><i class="fa fa-fw fa-user"></i><span class="label label-{{ contract.hero.faction.class }}"><a href="{{ path('archmage_game_home_help') }}#{{ contract.hero.name|slug }}" class="link">{{ contract.hero.name }}</a></span></td>
+                                <td class="text-right">{{ contract.level|nf }}</td>
+                                <td class="text-right">{{ (contract.level * contract.hero.power)|nf }}</td>
+                                <td class="text-right"></td>
+                                <td class="text-right">{% if contract.hero.skill.goldBonus > 0 %}{{ (contract.level * contract.hero.skill.goldBonus)|nf }}%{% else %}0{% endif %}</td>
+                                <td class="text-right">{% if contract.hero.skill.peopleBonus > 0 %}{{ (contract.level * contract.hero.skill.peopleBonus)|nf }}%{% else %}0{% endif %}</td>
+                                <td class="text-right">{% if contract.hero.skill.manaBonus > 0 %}{{ (contract.level * contract.hero.skill.manaBonus)|nf }}%{% else %}0{% endif %}</td>
+                                <td class="text-right">-0</td>
+                                <td class="text-right">-{{ (contract.level * contract.hero.goldMaintenance)|nf }}</td>
+                                <td class="text-right">-{{ (contract.level * contract.hero.peopleMaintenance)|nf }}</td>
+                                <td class="text-right">-{{ (contract.level * contract.hero.manaMaintenance)|nf }}</td>
+                                <td class="text-right">0</td>
+                                <td class="text-right">-{{ (contract.level * contract.hero.goldMaintenance)|nf }}</td>
+                                <td class="text-right">-{{ (contract.level * contract.hero.peopleMaintenance)|nf }}</td>
+                                <td class="text-right">-{{ (contract.level * contract.hero.manaMaintenance)|nf }}</td>
+                            </tr>
                             {% endfor %}
                             {% for item in player.items if item.artifact.legendary %}
                             <tr>
                                 <td class="text-left"><i class="fa fa-fw fa-diamond"></i><span class="label label-legendary"><a href="{{ path('archmage_game_home_help') }}#{{ item.artifact.name|slug }}" class="link">{{ item.artifact.name }}</a></span></td>
                                 <td class="text-right">{{ item.quantity|nf }}</td>
-                                <td class="text-right">0</td>
+                                <td class="text-right">{{ item.artifact.power|nf }}</td>
                                 <td class="text-right">0</td>
                                 <td class="text-right">{{ item.artifact.skill.goldBonus }}%</td>
                                 <td class="text-right">{{ item.artifact.skill.peopleBonus }}%</td>
@@ -281,25 +281,6 @@
                                 <td class="text-right">{{ item.artifact.skill.peopleBonus }}%</td>
                                 <td class="text-right">{{ item.artifact.skill.manaBonus }}%</td>
                             </tr>
-                            {% endfor %}
-                            {% for enchantment in player.enchantmentsVictim %}
-                                <tr>
-                                    <td class="text-left"><i class="fa fa-fw fa-link"></i><span class="label label-{{ enchantment.spell.faction.class }}"><a href="{{ path('archmage_game_home_help') }}#{{ enchantment.spell.name|slug }}" class="link">{{ enchantment.spell.name }}</a></span> de <span class="label label-{{ enchantment.owner.faction.class }}"><a href="{{ path('archmage_game_account_profile', {'id': enchantment.owner.id}) }}" class="link">{{ enchantment.owner.nick }}</a></span></td>
-                                    <td class="text-right">{{ enchantment.owner.magic|nf }}</td>
-                                    <td class="text-right">0</td>
-                                    <td class="text-right">{% if enchantment.spell.skill.terrainBonus > 0 %}{{ enchantment.spell.skill.terrainBonus }}{% else %}0{% endif %}</td>
-                                    <td class="text-right">{% if enchantment.spell.skill.goldBonus > 0 %}{{ enchantment.spell.skill.goldBonus * enchantment.owner.magic }}{% else %}0{% endif %}%</td>
-                                    <td class="text-right">{% if enchantment.spell.skill.peopleBonus > 0 %}{{ enchantment.spell.skill.peopleBonus * enchantment.owner.magic }}{% else %}0{% endif %}%</td>
-                                    <td class="text-right">{% if enchantment.spell.skill.manaBonus > 0 %}{{ enchantment.spell.skill.manaBonus * enchantment.owner.magic }}{% else %}0{% endif %}%</td>
-                                    <td class="text-right">{% if enchantment.spell.skill.terrainBonus < 0 %}{{ enchantment.spell.skill.terrainBonus * enchantment.owner.magic }}{% else %}-0{% endif %}</td>
-                                    <td class="text-right">{% if enchantment.spell.skill.goldBonus < 0 %}{{ enchantment.spell.skill.goldBonus * enchantment.owner.magic }}{% else %}-0{% endif %}%</td>
-                                    <td class="text-right">{% if enchantment.spell.skill.peopleBonus < 0 %}{{ enchantment.spell.skill.peopleBonus * enchantment.owner.magic }}{% else %}-0{% endif %}%</td>
-                                    <td class="text-right">{% if enchantment.spell.skill.manaBonus < 0 %}{{ enchantment.spell.skill.manaBonus * enchantment.owner.magic }}{% else %}-0{% endif %}%</td>
-                                    <td class="text-right">{% if enchantment.spell.skill.terrainBonus > 0 %}{{ enchantment.spell.skill.terrainBonus }}{% else %}{{ enchantment.spell.skill.terrainBonus * enchantment.owner.magic }}{% endif %}</td>
-                                    <td class="text-right">{{ enchantment.spell.skill.goldBonus * enchantment.owner.magic }}%</td>
-                                    <td class="text-right">{{ enchantment.spell.skill.peopleBonus * enchantment.owner.magic }}%</td>
-                                    <td class="text-right">{{ enchantment.spell.skill.manaBonus * enchantment.owner.magic }}%</td>
-                                </tr>
                             {% endfor %}
                             {% for troop in player.troops %}
                             <tr>
@@ -318,6 +299,25 @@
                                 <td class="text-right">-{{ (troop.quantity * troop.unit.goldMaintenance)|nf }}</td>
                                 <td class="text-right">-{{ (troop.quantity * troop.unit.peopleMaintenance)|nf }}</td>
                                 <td class="text-right">-{{ (troop.quantity * troop.unit.manaMaintenance)|nf }}</td>
+                            </tr>
+                            {% endfor %}
+                            {% for enchantment in player.enchantmentsVictim %}
+                            <tr>
+                                <td class="text-left"><i class="fa fa-fw fa-link"></i><span class="label label-{{ enchantment.spell.faction.class }}"><a href="{{ path('archmage_game_home_help') }}#{{ enchantment.spell.name|slug }}" class="link">{{ enchantment.spell.name }}</a></span> de <span class="label label-{{ enchantment.owner.faction.class }}"><a href="{{ path('archmage_game_account_profile', {'id': enchantment.owner.id}) }}" class="link">{{ enchantment.owner.nick }}</a></span></td>
+                                <td class="text-right">{{ enchantment.owner.magic|nf }}</td>
+                                <td class="text-right">0</td>
+                                <td class="text-right">{% if enchantment.spell.skill.terrainBonus > 0 %}{{ enchantment.spell.skill.terrainBonus }}{% else %}0{% endif %}</td>
+                                <td class="text-right">{% if enchantment.spell.skill.goldBonus > 0 %}{{ enchantment.spell.skill.goldBonus * enchantment.owner.magic }}{% else %}0{% endif %}%</td>
+                                <td class="text-right">{% if enchantment.spell.skill.peopleBonus > 0 %}{{ enchantment.spell.skill.peopleBonus * enchantment.owner.magic }}{% else %}0{% endif %}%</td>
+                                <td class="text-right">{% if enchantment.spell.skill.manaBonus > 0 %}{{ enchantment.spell.skill.manaBonus * enchantment.owner.magic }}{% else %}0{% endif %}%</td>
+                                <td class="text-right">{% if enchantment.spell.skill.terrainBonus < 0 %}{{ enchantment.spell.skill.terrainBonus * enchantment.owner.magic }}{% else %}-0{% endif %}</td>
+                                <td class="text-right">{% if enchantment.spell.skill.goldBonus < 0 %}{{ enchantment.spell.skill.goldBonus * enchantment.owner.magic }}{% else %}-0{% endif %}%</td>
+                                <td class="text-right">{% if enchantment.spell.skill.peopleBonus < 0 %}{{ enchantment.spell.skill.peopleBonus * enchantment.owner.magic }}{% else %}-0{% endif %}%</td>
+                                <td class="text-right">{% if enchantment.spell.skill.manaBonus < 0 %}{{ enchantment.spell.skill.manaBonus * enchantment.owner.magic }}{% else %}-0{% endif %}%</td>
+                                <td class="text-right">{% if enchantment.spell.skill.terrainBonus > 0 %}{{ enchantment.spell.skill.terrainBonus }}{% else %}{{ enchantment.spell.skill.terrainBonus * enchantment.owner.magic }}{% endif %}</td>
+                                <td class="text-right">{{ enchantment.spell.skill.goldBonus * enchantment.owner.magic }}%</td>
+                                <td class="text-right">{{ enchantment.spell.skill.peopleBonus * enchantment.owner.magic }}%</td>
+                                <td class="text-right">{{ enchantment.spell.skill.manaBonus * enchantment.owner.magic }}%</td>
                             </tr>
                             {% endfor %}
                             {% for enchantment in player.enchantmentsOwner %}
