--- a/src/Archmage/GameBundle/Resources/views/Kingdom/summary.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Kingdom/summary.html.twig
@@ -203,15 +203,15 @@
                             <tr>
                                 <th class="text-center">Posesión</th>
                                 <th class="text-center">#</th>
-                                <th class="text-center"><i class="fa fa-fw fa-rocket"></i></th>
-                                <th class="text-center"><i class="fa fa-fw fa-shield"></i></th>
-                                <th class="text-center"><i class="fa fa-fw fa-link"></i></th>
-                                <th class="text-center"><i class="fa fa-fw fa-user-plus"></i></th>
-                                <th class="text-center"><i class="fa fa-fw fa-hourglass-half"></i></th>
-                                <th class="text-center"><i class="fa fa-fw fa-globe"></i></th>
-                                <th class="text-center"><i class="fa fa-fw fa-money"></i></th>
-                                <th class="text-center"><i class="fa fa-fw fa-group"></i></th>
-                                <th class="text-center"><i class="fa fa-fw fa-tint"></i></th>
+                                <th class="text-center"><i class="fa fa-fw fa-rocket" data-toggle="tooltip" data-placement="top" title="Poder de tu Reino"></i></th>
+                                <th class="text-center"><i class="fa fa-fw fa-shield" data-toggle="tooltip" data-placement="top" title="Defensa Física de tu Reino"></i></th>
+                                <th class="text-center"><i class="fa fa-fw fa-link" data-toggle="tooltip" data-placement="top" title="Defensa Mágica de tu Reino"></i></th>
+                                <th class="text-center"><i class="fa fa-fw fa-user-plus" data-toggle="tooltip" data-placement="top" title="Bonus de invocación de tropas de tu Reino"></i></th>
+                                <th class="text-center"><i class="fa fa-fw fa-hourglass-half" data-toggle="tooltip" data-placement="top" title="Bono de investigación de tu Reino"></i></th>
+                                <th class="text-center"><i class="fa fa-fw fa-globe" data-toggle="tooltip" data-placement="top" title="Tierras al turno de tu Reino"></i></th>
+                                <th class="text-center"><i class="fa fa-fw fa-money" data-toggle="tooltip" data-placement="top" title="Oro al turno de tu Reino"></i></th>
+                                <th class="text-center"><i class="fa fa-fw fa-group" data-toggle="tooltip" data-placement="top" title="Personas al turno de tu Reino"></i></th>
+                                <th class="text-center"><i class="fa fa-fw fa-tint" data-toggle="tooltip" data-placement="top" title="Mana al turno de tu Reino"></i></th>
                             </tr>
                         </thead>
                         <tbody>
